--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -311,7 +311,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KENYA="Kenia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KE="KE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KIRIBATI="Kiribati"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KI="KI"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KOREADEMOCRATICPEOPLESREPUBLICOF="Korea, Demokratische Volksrepublik"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KOREADEMOCRATICPEOPLESREPUBLICOF="Demokratische Volksrepublik Korea"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KP="KP"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KOREAREPUBLICOF="Korea, Republik"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KR="KR"
@@ -337,7 +337,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LITHUANIA="Litauen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LT="LT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LUXEMBOURG="Luxemburg"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LU="LU"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACAO="Macao"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACAO="Macau"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MO="MO"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACEDONIATHEFORMERYUGOSLAVREPUBLICOF="Mazedonien, Die ehemalige jugoslawische Republik"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MK="MK"
