--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -365,7 +365,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MAYOTTE="Mayotte"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_YT="YT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MEXICO="Mexiko"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MX="MX"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MICRONESIAFEDERATEDSTATESOF="Mikronesien, Föderierte Staaten von"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MICRONESIAFEDERATEDSTATESOF="Föderierte Staaten von Mikronesien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_FM="FM"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MOLDOVAREPUBLICOF="Moldawien, Republik"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MD="MD"
