--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -513,7 +513,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TAIWANPROVINCEOFCHINA="Taiwan, Provinz China"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TW="TW"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TAJIKISTAN="Tadschikistan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TJ="TJ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TANZANIAUNITEDREPUBLICOF="Tansania, Vereinigte Republik von"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TANZANIAUNITEDREPUBLICOF="Vereinigte Republik von Tansania"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TZ="TZ"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_THAILAND="Thailand"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TH="TH"
