wrong country fixed

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -501,7 +501,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SURINAME="Suriname"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SR="SR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SVALBARDANDJANMAYEN="Svalbard und Jan Mayen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SJ="SJ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWAZILAND="Schweiz"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWAZILAND="Swasiland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SZ="SZ"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWEDEN="Schweden"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SE="SE"
