--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -33,7 +33,7 @@ MOD_DD_GMAPS_MODULE_ZIP_LABEL="PLZ"
 MOD_DD_GMAPS_MODULE_ZIP_DESC="Eine PLZ für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_COUNTRY_SELECT="- Land auswählen -"
 MOD_DD_GMAPS_MODULE_COUNTRY_LABEL="Land"
-MOD_DD_GMAPS_MODULE_COUNTRY_DESC="Eine Land für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
+MOD_DD_GMAPS_MODULE_COUNTRY_DESC="Ein Land für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="Bundesland"
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="Eine Bundesland für den Standorteintrag"
 
