Standalone LocationCategory feature added

--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -72,6 +72,9 @@ MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Расширенные геогра
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Компоненты требуется. С их помощью все географические положения смогут загрузиться из компонентов вместе с единичным географическим положением."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Только расширенные географические положения"
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Покажите только географические положение компонентов без единичного географического положения из этого модуля и без единичного географического положения PopUp(Информационное окно)."
+; todo: translate
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_LABEL="Standalone: Only location category"
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_DESC="Show only locations that are assigned to the selected category. Note: This feature works only outside of com_dd_gmaps_locations!"
 
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Ваше геграфическое положение"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Градус широты"
