--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -71,7 +71,9 @@ MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon Funktionen für DD GMa
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Erweiterte Standorte"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Komponente erforderlich. Damit können alle Standorte aus der Komponente zusammen mit dem einzelnen Standort geladen werden."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Nur erweiterte Standorte"
-MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Zeigen Sie nur die Komponentenstandorte ohne den einzelnen Standort aus diesem Modul und ohne den einzelnen Standort PopUp (Info-Fenster)."
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Zeige nur Komponentenstandorte ohne den einzelnen Standort aus diesem Modul und ohne den einzelnen Standort PopUp (Info-Fenster)."
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_LABEL="Standalone: Nur Standorte von Kategorie"
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_DESC="Zeige nur Standorte, welche der ausgewählten Kategorie zugeordnet sind. Notiz: Dieses feature läuft nur ausserhalb von com_dd_gmaps_locations, sprich als alleinstehendes Modul!"
 
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Ihr Standort"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Breitengrad"
