--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -72,6 +72,8 @@ MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Extend locations"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="Requires DD_MapsLocations componente. This allows to load all locations from the component together with the single location."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Only extended locations"
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Show only the component locations withou the single location from this module and without the single location PopUp (Info windows)"
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_LABEL="Standalone: Only location category"
+MOD_DD_GMAPS_MODULE_ONLY_LOCATION_CATEGORY_DESC="Show only locations that are assigned to the selected category. Note: This feature works only outside of com_dd_gmaps_locations!"
 
 MOD_DD_GMAPS_MODULE_WARNUNG_MODUL_EXISTS_ALREADY="DD GMaps Module already exists on this page. Map module can only be loaded once for each page. Please check the module assignment."
 
