addonfeatures MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS_K2

--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -68,6 +68,8 @@ MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Изображение метки 
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Аддоны функции"
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Расширенное расширение. DD GMaps Locations Компоненты требуется."
 MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Аддоны функции для DD GMaps Location</b>:"
+; todo: translate
+MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS_K2="<b><hr>Addon Features for DD GMaps Location in combination with K2</b>:"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Расширенные географические положения"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Компоненты требуется. С их помощью все географические положения смогут загрузиться из компонентов вместе с единичным географическим положением."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Только расширенные географические положения"
