--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -68,6 +68,7 @@ MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster Marker Bild (max. Größe 
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Funktionen"
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Erweiterte Erweiterung. DD GMaps Locations Komponente erforderlich."
 MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon Funktionen für DD GMaps Location</b>:"
+MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS_K2="<b><hr>Addon Funktionen für DD GMaps Location in Kombination mit K2</b>:"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Erweiterte Standorte"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Komponente erforderlich. Damit können alle Standorte aus der Komponente zusammen mit dem einzelnen Standort geladen werden."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Nur erweiterte Standorte"
