--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -68,6 +68,7 @@ MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster marker image (max. size 55
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Features"
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Extend extension. This requires the DD GMaps Locations component."
 MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon-Features for DD GMaps Location</b>:"
+MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS_K2="<b><hr>Addon Features for DD GMaps Location in combination with K2</b>:"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Extend locations"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="Requires DD_MapsLocations componente. This allows to load all locations from the component together with the single location."
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Only extended locations"
