--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -42,6 +42,10 @@ MOD_DD_GMAPS_MODULE_LATITUDE_DESC="The coordinates (latitude) from geocoding Goo
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Longitude"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
 
+MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Hard Coding!</p>"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="Enable GeoCoding Hard Coding: (Experimental)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="This setting overwrites the location data which are automatically generated from the address!"
+
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
 MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="The system plugin (DD GMaps Locations GeoCode) must be installed and enabled for geo coding!"
@@ -57,6 +61,7 @@ MOD_DD_GMAPS_MODULE_API_KEY_REQUIRED_COMPONENT="Google Places API Key required! 
 MOD_DD_GMAPS_MODULE_API_KEY_REQUIRED="Google Places API Key required! Please enter your Google API Key in the backend module > DD GMaps Module > Google API Settings."
 
 MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" data. Mostly this is due to incorrect address information, such as (street,  zip, location, country)."
+MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS_HARDCODE="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" HardCode GeoData or disable GeoHarcoding. Backend module > DD GMaps Module > Default Address > HardCoding Settings."
 
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings (max. size 55px to 55px, see description of image fields.)"
