--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -42,6 +42,10 @@ MOD_DD_GMAPS_MODULE_LATITUDE_DESC="Die Koordinaten (Breitengrad) für die GeoCod
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Längengrad"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Die Koordinaten (Längengrad) für die GeoCoding Google API, wird nach dem Speichern befüllt. Koordinaten können nicht bearbeitet werden."
 
+MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Harte Codierung!</p>"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="GeoCoding Harte Codierung: (Experimentell)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="Diese Einstellung überschreibt die aus der Adresse automatisch generierten Standortdaten!""Enable GeoCoding Hard Coding: (Experimental)"
+
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Karte wird geladen ..."
 
 MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Das System-Plugin (DD GMaps Locations GeoCode) muss für die Geokodierung installiert und aktiviert sein!"
@@ -54,6 +58,7 @@ MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_LABEL="Google Geocode API Key"
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_DESC="Google Geocode API Key (Schlüssel) für Geocode API"
 
 MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Die Standortbestimmung ist fehlgeschlagen! Bitte überprüfen Sie die "_QQ_"GEO Addresse"__QQ" (Standort Adress-Daten). Meist liegt dies an falschen Adress-Informationen wie (Straße, PLZ, Ort, Land)."
+MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS_HARDCODE="Die Standortbestimmung ist fehlgeschlagen! Bitte überprüfen Sie die "_QQ_"GEO Addresse"_QQ_" HardCode GeoData oder deaktiviere Geo HarteCodierung. Backend Module > DD GMaps Module > Standard Addresse > HardCoding Einstellung (deaktivieren)."
 
 MOD_DD_GMAPS_MODULE_API_KEY_REQUIRED_COMPONENT="Google Places API Key erforderlich! Bitte geben Sie im Backend unter Komponenten > DD GMaps Locations > Optionen > Google API Einstellungen > Ihren Google API Key (Schlüssel) ein."
 MOD_DD_GMAPS_MODULE_API_KEY_REQUIRED="Google Places API Key erforderlich! Bitte geben Sie im Backend unter Module > DD GMaps Module > Google API Einstellungen > Ihren Google API Key (Schlüssel) ein."
