--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -42,6 +42,10 @@ MOD_DD_GMAPS_MODULE_LATITUDE_DESC="Координаты (градус широт
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Градус долготы"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Координаты (градус долготы) для API геокодирования Google заполнен после сохранения. Координаты не смогут быть изменены."
 
+MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-error' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Hard Coding!</p>"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="(Экспериментально)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="Этот параметр переписывает из адреса автоматически генерированы данные географического положения!"
+
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Карта загружается ..."
 
 MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Плагин системы (DD GMaps Locations GeoCode) должен быть установлен для геокодирования и активирован!"
@@ -88,6 +92,9 @@ MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Градус широты"
 MOD_DD_GMAPS_MODULE_YOUR_LONGITUDE="Градус долготы"
 
 MOD_DD_GMAPS_MODULE_WARNUNG_MODUL_EXISTS_ALREADY="Модуль DD GMaps уже существует на этой веб-странице. Карта может быть загружена только один раз для каждой страницы. Пожалуйста, проверьте назначение модуля."
+; todo: translate
+MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS_HARDCODE="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" HardCode GeoData or disable GeoHarcoding. Backend module > DD GMaps Module > Default Address > HardCoding Settings."
+
 
 ; @copyright (C) 2017 Florian Häusler Country Name Translation (extended selection)
 ; @copyright (C) 2015 Rainer Schlötterer Country Name Translation (reduced selection)
