GEOHARDCODE Translations added INFOWINDOW Translations added

--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -43,8 +43,8 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Longitude"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
 
 MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Hard Coding!</p>"
-MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="Enable GeoCoding Hard Coding: (Experimental)"
-MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="This setting overwrites the location data which are automatically generated from the address!"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="⚑ Enable GeoCoding Hard Coding: (Experimental)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="This setting overwrites the location data which are automatically generated from the address!<b>Note:</b> It did also trigger Info Windows Option to hide the address from the frontend. To clear this setting, check the Info Window tab here the the module settings, after enabling GeoHardcoding."
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
@@ -62,6 +62,17 @@ MOD_DD_GMAPS_MODULE_API_KEY_REQUIRED="Google Places API Key required! Please ent
 
 MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" data. Mostly this is due to incorrect address information, such as (street,  zip, location, country)."
 MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS_HARDCODE="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" HardCode GeoData or disable GeoHarcoding. Backend module > DD GMaps Module > Default Address > HardCoding Settings."
+
+MOD_DD_GMAPS_MODULE_INFOWINDOW_SETTINGS_LABEL="Info Window"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_SETTINGS_DESC="Info Window Options - Optional settings for the google maps marker popup infow window."
+MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_LABEL="Info Window"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_DESC="<b>PopUp Info Window option:</b><br>Auto show the popUp Info Window with the default address data or alternative text data (Info Window Content). This is the Info Window which is shown after clicking the marker at the google map. By auto show mode, it is open by default. <br><b>Note:</b> This will only effect the single address marker or the geohardcode marker. If any DD Extension (Addon Features) trigger any other marker for popUp Info Window, this option will be ignored."
+MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_AUTOSHOW="Auto Show"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_ONCLICK="On Click"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_LABEL="Default Address"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_DESC="Show or hide the default address at Info Window popUp."
+MOD_DD_GMAPS_MODULE_INFOWINDOW_CONTENT_LABEL="Info Window Content"
+MOD_DD_GMAPS_MODULE_INFOWINDOW_CONTENT_DESC="<b>Info Window Content:</b><br>Optional content for the info windows."
 
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings (max. size 55px to 55px, see description of image fields.)"
