--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -43,7 +43,7 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Längengrad"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Die Koordinaten (Längengrad) für die GeoCoding Google API, wird nach dem Speichern befüllt. Koordinaten können nicht bearbeitet werden."
 
 MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Harte Codierung!</p>"
-MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="⚑ GeoCoding Harte Codierung: (Experimentell)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="GeoCoding Harte Codierung: (Experimentell)"
 MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="Diese Einstellung überschreibt die aus der Adresse automatisch generierten Standortdaten! Enable GeoCoding Hard Coding: (Experimental) <b>Hinweis:</b> Es wird ebenfals eine Info Fenster Option gesetzt, zum verbergen der Address im Frontend. Zum zurücksetzen dieser Einstellung, prüfen Sie bitte den Info Fenster Tab hier in den Modul Einstellungen nach dem aktivieren des GeoHardcoding."
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Karte wird geladen ..."
