--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -43,7 +43,7 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Градус долготы"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Координаты (градус долготы) для API геокодирования Google заполнен после сохранения. Координаты не смогут быть изменены."
 
 MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Hard Coding!</p>"
-MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="⚑ (Экспериментально)"
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="(Экспериментально)"
 MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="Этот параметр переписывает из адреса автоматически генерированы данные географического положения!"
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Карта загружается ..."
