geohardcodescript as field type

--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -45,6 +45,7 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding G
 MOD_DD_GMAPS_MODULE_GEOHARDCODE="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>GeoCoding Hard Coding!</p>"
 MOD_DD_GMAPS_MODULE_GEOHARDCODE_LABEL="Enable GeoCoding Hard Coding: (Experimental)"
 MOD_DD_GMAPS_MODULE_GEOHARDCODE_DESC="This setting overwrites the location data which are automatically generated from the address!<b>Note:</b> It did also trigger Info Windows Option to hide the address from the frontend. To clear this setting, check the Info Window tab here the the module settings, after enabling GeoHardcoding."
+MOD_DD_GMAPS_MODULE_GEOHARDCODE_UNSET="Unset required address fields"
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
