--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -15,7 +15,8 @@ MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Breite erzwingen"
 MOD_DD_GMAPS_MODULE_WIDTH_DESC="Die Breite der Karte in px. z.B. "_QQ_" 400 "_QQ_". Bitte ohne px eingeben!"
 MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Höhe erzwingen"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="Die Höhe der Karte in px. z.B. "_QQ_" 400 "_QQ_". Bitte ohne px eingeben!"
-MOD_DD_GMAPS_MODULE_FULLSIZE="Vollbild Karte"
+MOD_DD_GMAPS_MODULE_FULLSIZE="Vollbild Karte zeigen"
+MOD_DD_GMAPS_MODULE_FULLSIZE_CLOSE="Vollbild Karte schließen"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Vollbild Button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="Zeigt einen Vollbild Button an"
 
