--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -15,7 +15,8 @@ MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Force Width"
 MOD_DD_GMAPS_MODULE_WIDTH_DESC="The width of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
 MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Force Height"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="The height of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
-MOD_DD_GMAPS_MODULE_FULLSIZE="Fullsize Map"
+MOD_DD_GMAPS_MODULE_FULLSIZE="Fullsize Map show"
+MOD_DD_GMAPS_MODULE_FULLSIZE_CLOSE="Fullsize Map close"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button"
 
