ZOOMLEVEL ZOOMLEVEL_INFOWINDOW

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -7,8 +7,8 @@
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
 MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zur anzeige einer Google Karte. Addon-Modul für DD GMaps Locations. Modul kann auch als eigenständiges Modul verwendet werden."
 
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom-Ebene"
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Die Zoom-Ebene der Karte. Ein Bereich zwischen 1 und 10."
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom-Ebene Map"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Die Zoom-Ebene der Karte. Ein Bereich zwischen 1 und 20."
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Kartengröße erzwingen"
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="Wenn die Größe nicht zum Modul passt, kann dies hier erzwungen werden."
 MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Breite erzwingen"
@@ -71,6 +71,8 @@ MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_LABEL="Info Fenster"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_DESC="<b>PopUp Info Fenster Optionen:</b><br>Automatisches Anzeigen des PopUp Info-Fensters mit den Standardadressdaten oder alternativen Textdaten (Info Fensters Content). Dies ist das Infofenster, das nach einem Klick auf den Marker in der Google Map angezeigt wird. Im Modus "Auto Show" ist das Info Fenster standardmäßig geöffnet. <br><b>Hinweis:</b> Dies wirkt sich nur auf den einzelnen Standardadresse Marker oder den Geohardcode-Marker aus. Sollte eine DD Extension (Addon Features) einen anderen Marker für das PopUp Info Fenster auslösen, wird diese Option ignoriert."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_AUTOSHOW="Automatich zeigen"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_ONCLICK="Auf Klick"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_LABEL="Zoom-Ebene Info Fenster (separat)"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_DESC="Die Zoom-Ebene speziell für das Info Fenster. Ein Bereich zwischen 1 und 20."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_LABEL="Standard Addresse"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_DESC="Ein- und Ausblenden der Standardadresse im Info-Fenster popUp."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_CONTENT_LABEL="Info Fenster Content"
