--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -7,8 +7,8 @@
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
 MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="A Joomla! module to display Google Maps. Addon Module for DD Gmaps Locations. Module can also be used as stand alone module."
 
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom level"
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma level of the map. A range beetween 1 and 10."
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom Level Map"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma Level of the map. A range beetween 1 and 20."
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Force Size"
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="If the size does not fit to the module, this can be forced here."
 MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Force Width"
@@ -71,6 +71,8 @@ MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_LABEL="Info Window"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_DESC="<b>PopUp Info Window option:</b><br>Auto show the popUp Info Window with the default address data or alternative text data (Info Window Content). This is the Info Window which is shown after clicking the marker at the google map. By auto show mode, it is open by default. <br><b>Note:</b> This will only effect the single address marker or the geohardcode marker. If any DD Extension (Addon Features) trigger any other marker for popUp Info Window, this option will be ignored."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_AUTOSHOW="Auto Show"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_ONCLICK="On Click"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_LABEL="Zoom Level Info Window (separat)"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_DESC="The Zooma Level specially for the info window. A range beetween 1 and 20."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_LABEL="Default Address"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_DESC="Show or hide the default address at Info Window popUp."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_CONTENT_LABEL="Info Window Content"
