--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -8,7 +8,7 @@ MOD_DD_GMAPS_MODULE="DD GMaps Модуль"
 MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Joomla! Модуль для отображения карты Google. Модуль-аддон для DD GMaps Locations. Модуль может быть использован в качестве независимого модуля."
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Увеличение уровня"
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Уровень масштабирования карты. Область 1-10."
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Уровень масштабирования карты. Область 1-20."
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Размер карты зафиксировать"
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="Если размер не подходит к модулю, его можно здесь зафиксировать"
 MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Зафиксировать ширину"
@@ -73,6 +73,8 @@ MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_LABEL="Info Window"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_DESC="<b>PopUp Info Window option:</b><br>Auto show the popUp Info Window with the default address data or alternative text data (Info Window Content). This is the Info Window which is shown after clicking the marker at the google map. By auto show mode, it is open by default. <br><b>Note:</b> This will only effect the single address marker or the geohardcode marker. If any DD Extension (Addon Features) trigger any other marker for popUp Info Window, this option will be ignored."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_AUTOSHOW="Auto Show"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_OPEN_ONCLICK="On Click"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_LABEL="Zoom Level Info Window (separat)"
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_INFOWINDOW_DESC="The Zooma Level specially for the info window. A range beetween 1 and 20."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_LABEL="Default Address"
 MOD_DD_GMAPS_MODULE_INFOWINDOW_DEFAULTADDRESS_DESC="Show or hide the default address at Info Window popUp."
 MOD_DD_GMAPS_MODULE_INFOWINDOW_CONTENT_LABEL="Info Window Content"
