--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -8,7 +8,7 @@ MOD_DD_GMAPS_MODULE="DD GMaps Module"
 MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="A Joomla! module to display Google Maps. Addon Module for DD Gmaps Locations. Module can also be used as stand alone module."
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom Level Map"
-MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma Level of the map. A range beetween 1 and 20."
+MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma Level of the map. A range between 1 and 20."
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Force Size"
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="If the size does not fit to the module, this can be forced here."
 MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Force Width"
@@ -21,22 +21,22 @@ MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button"
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default Address"
-MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save the address."
+MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as a standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save the address."
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_LABEL="Set as default position"
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="The detault position of the map"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_LABEL="Location name"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_DESC="The name of the location."
 MOD_DD_GMAPS_MODULE_STREET_LABEL="Street"
 MOD_DD_GMAPS_MODULE_STREET_DESC="A street and house number for the location entry. Note, required for geocoding to place marker on the map of map module."
-MOD_DD_GMAPS_MODULE_LOCATION_LABEL="Location"
-MOD_DD_GMAPS_MODULE_LOCATION_DESC="A location for the location entry. Note, required for geocoding to place marker on the map of map module."
-MOD_DD_GMAPS_MODULE_ZIP_LABEL="ZIP"
-MOD_DD_GMAPS_MODULE_ZIP_DESC="A zip code for the location entry. Note, required for geocoding to place marker on the map of map module."
+MOD_DD_GMAPS_MODULE_LOCATION_LABEL="City or Suburb"
+MOD_DD_GMAPS_MODULE_LOCATION_DESC="A city or suburb for the location entry. Note, required for geocoding to place marker on the map of map module."
+MOD_DD_GMAPS_MODULE_ZIP_LABEL="Postal/ZIP Code"
+MOD_DD_GMAPS_MODULE_ZIP_DESC="A Postal/ZIP Code code for the location entry. Note, required for geocoding to place marker on the map of map module."
 MOD_DD_GMAPS_MODULE_COUNTRY_SELECT="- Select Country -"
 MOD_DD_GMAPS_MODULE_COUNTRY_LABEL="Country"
 MOD_DD_GMAPS_MODULE_COUNTRY_DESC="A country for the location entry. Note, required for geocoding to place marker on the map of map module."
-MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="Federal state"
-MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="A federal state for the location entry."
+MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="State or Province"
+MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="A State or Province for the location entry."
 
 MOD_DD_GMAPS_MODULE_LATITUDE_LABEL="Latitude"
 MOD_DD_GMAPS_MODULE_LATITUDE_DESC="The coordinates (latitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
