--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -1,7 +1,7 @@
 ; @package    DD_GMaps_Module
 ;
 ; @author     HR IT-Solutions Florian Häusler <info@hr-it-solutions.com>
-; @copyright  Copyright (C) 2011 - 2017 Didldu e.K. | HR IT-Solutions
+; @copyright  Copyright (C) 2011 - 2018 Didldu e.K. | HR IT-Solutions
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
@@ -84,6 +84,11 @@ MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker image"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_DESC="Marker image (max. size 50px to 50px)"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_LABEL="Cluster marker image"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster marker image (max. size 55px to 55px)"
+
+MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_LABEL="Styles"
+MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_DESC="Applie custom styles to the map. To find more about styling, visit: https://developers.google.com/maps/documentation/javascript/styling"
+MOD_DD_GMAPS_MODULE_STYLEPACK_DESC="Select an example style from /media/mod_dd_gmaps_module/js/styles/"
+MOD_DD_GMAPS_MODULE_STYLEPACK_LABEL="Stylepack"
 
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Features"
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Extend extension. This requires the DD GMaps Locations component."
