Custom styles option

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -87,7 +87,7 @@ MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster Marker Bild (max. Größe 
 
 MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_LABEL="Styles"
 MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_DESC="Wenden Sie benutzerdefinierte Stile auf eine Karte an. Um mehr über Styling zu erfahren, besuchen Sie: https://developers.google.com/maps/documentation/javascript/styling"
-MOD_DD_GMAPS_MODULE_STYLEPACK_DESC="Wählen Sie einen Beispielstil aus /media/mod_dd_gmaps_module/js/styles/"
+MOD_DD_GMAPS_MODULE_STYLEPACK_DESC="Wählen Sie einen Beispielstil aus /media/mod_dd_gmaps_module/js/styles/ oder setze deine eigenen styles in die custom.json Für das styling, besuchen Sie: https://mapstyle.withgoogle.com/"
 MOD_DD_GMAPS_MODULE_STYLEPACK_LABEL="Stylepack"
 
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Funktionen"
