--- a/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
+++ b/language/ru-RU/ru-RU.mod_dd_gmaps_module.ini
@@ -89,8 +89,8 @@ MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Изображение метки 
 
 ; todo: translate
 MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_LABEL="Styles"
-MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_DESC="Applie custom styles to a map. To find more about styling, visit: https://developers.google.com/maps/documentation/javascript/styling"
-MOD_DD_GMAPS_MODULE_STYLEPACK_DESC="Select an example style from /media/mod_dd_gmaps_module/js/styles/"
+MOD_DD_GMAPS_MODULE_STYLE_SETTINGS_DESC="Applie custom styles to the map. To find more about styling, visit: https://developers.google.com/maps/documentation/javascript/styling"
+MOD_DD_GMAPS_MODULE_STYLEPACK_DESC="Select an example style from /media/mod_dd_gmaps_module/js/styles/ or set your own style in the custom.json For styling, visit: https://mapstyle.withgoogle.com/"
 MOD_DD_GMAPS_MODULE_STYLEPACK_LABEL="Stylepack"
 
 MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Аддоны функции"
