Custom styles option

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -1,11 +1,14 @@
 ; @package    DD_GMaps_Module
 ;
-; @author     HR IT-Solutions Florian Häusler <info@hr-it-solutions.com>
-; @copyright  Copyright (C) 2011 - 2018 Didldu e.K. | HR IT-Solutions
+; @author     HR-IT-Solutions GmbH Florian Häusler <info@hr-it-solutions.com>
+; @copyright  Copyright (C) 2011 - 2018 HR-IT-Solutions GmbH
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
 MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zur anzeige einer Google Karte. Addon-Modul für DD GMaps Locations. Modul kann auch als eigenständiges Modul verwendet werden."
+
+MOD_DD_GMAPS_MODULE_OFF="OFF"
+MOD_DD_GMAPS_MODULE_LOAD="LOAD"
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom-Ebene Map"
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Die Zoom-Ebene der Karte. Ein Bereich zwischen 1 und 20."
@@ -19,6 +22,17 @@ MOD_DD_GMAPS_MODULE_FULLSIZE="Vollbild Karte zeigen"
 MOD_DD_GMAPS_MODULE_FULLSIZE_CLOSE="Vollbild Karte schließen"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Vollbild Button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="Zeigt einen Vollbild Button an"
+
+MOD_DD_GMAPS_MODULE_GDPR_EU_PRIVAY_MODE_LABEL="EU Privacy Mode"
+MOD_DD_GMAPS_MODULE_GDPR_EU_PRIVAY_MODE_DESC="EU Privacy Mode (a GDPR TwoClick Solution). At privacy mode ON, the map is OFF!, this means, that just a cover img or/and a GDPR text is displayed."
+MOD_DD_GMAPS_MODULE_GDPR="GDPR Note:"
+MOD_DD_GMAPS_MODULE_GDPR_TEXT_LABEL="GDPR Text"
+MOD_DD_GMAPS_MODULE_GDPR_TEXT_DESC="Enter a GDPR text that should be shown together with the privacy cover. <br><b>NOTE:</b> default cover can only be defined at EU Privacy 'ON' mode."
+MOD_DD_GMAPS_MODULE_GDPR_COVER_LABEL="GDPR Cover Image"
+MOD_DD_GMAPS_MODULE_GDPR_COVER_DESC="Select a cover image to display insted of the default cover and inseted of the map!"
+MOD_DD_GMAPS_MODULE_GDPR_LC_LABEL="GDPR Language Constant"
+MOD_DD_GMAPS_MODULE_GDPR_LC_DESC="GDPR Language Constan can be used together or insted of GDPR Text. To define your own text or multilingual texts, you can override the constant, by using: <small><u>MOD_DD_GMAPS_MODULE_GDPR_LC</u></small>"
+MOD_DD_GMAPS_MODULE_GDPR_LC_SPACER="<small style='cursor:default;display: block;margin: -14px 0 0'>Language Constant: <span style='color: #46a546'>MOD_DD_GMAPS_MODULE_GDPR</span></small><hr>"
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Standardadresse"
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="Die Standardadresse der Karte bei der Anzeige als eigenständiges Modul. Dies ist auch erforderlich, wenn Sie eine Standardposition setzen möchten, z.B. Für DD GMaps Locations. Um die Koordinaten zu geocodieren, speichern Sie die Adresse."
