--- a/language/de-DE/de-DE.mod_dd_gmaps_module.sys.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.sys.ini
@@ -5,4 +5,5 @@
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
-MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zur anzeige einer Google Karte. Addon-Modul für DD GMaps Locations. Modul kann auch als eigenständiges Modul verwendet werden."
+MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zur anzeige einer Google Karte. Addon-Modul für DD GMaps Locations. Modul kann auch als eigenständiges Modul verwendet werden."<br><br>Get more Features and much more with our brand new <a href='https://www.hr-it-solutions.com/extension-shop/joomla-extensions/9/gmaps-module-eu-privacy?number=HRIT10009.1'><b><u>PRO-Version</u></b> <span class='icon-cart'></span> Upgrade NOW !</a>"
+
